# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  pyproject.toml.poetry  setup.cfg
page_analyzer/: __init__.py  app.py  config.py  db.py  exceptions.py  html_parser.py  tools.py
page_analyzer/templates/: base.html  error.html  index.html  url_page.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: fl_messages.html  head.html  nav.html
page_analyzer/templates/urls/: index.html  show.html
