[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third project 'Page Analyser'"
authors = ["Victoria Treskova <vikatresk@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet-code"}]

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^3.0.3"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
